...
                  "Please login to view your cart",
                  style: TextStyle(fontSize: 18),
                ),
                Container(
                  margin: const EdgeInsets.only(top: 10.0),
                  child: ElevatedButton(
                    key: const Key("cart_login_button"),
                    child: const Text("Login"),
                    onPressed: () {
                      Navigator.push(
                        context,
                        MaterialPageRoute(
                            builder: (context) => const MyLoginPage()),
...
            style: TextStyle(color: Colors.black),
          ),
        ],
      ),
      actions: [
        IconButton(
            key: const Key("cart_to_home_button"),
            onPressed: () {
              Navigator.of(context).pushNamed(AppRoutes.home);
            },
            icon: const Icon(Icons.home),
            padding: const EdgeInsets.only(right: 15)),
      ],
...
