...
        ),
        foregroundColor: Colors.black,
        backgroundColor: Colors.white,
        actions: [
          IconButton(
              tooltip: 'Enter the cart page',
              key: const Key("home_cart_button"),
              onPressed: () {
                Navigator.of(context).pushNamed(AppRoutes.cart);
              },
              icon: const Icon(Icons.shopping_cart),
              padding: const EdgeInsets.only(right: 15)),
          IconButton(
...
                Navigator.of(context).pushNamed(AppRoutes.login);
              },
              icon: const Icon(Icons.login),
              padding: const EdgeInsets.only(right: 15)),
          IconButton(
              tooltip: 'Enter the Forum page',
              key: const Key("home_forum_button"),
              onPressed: () {
                Navigator.of(context).pushNamed(AppRoutes.forum);
              },
              icon: const Icon(Icons.help_outline),
              padding: const EdgeInsets.only(right: 10)),
        ],
...
