...
                    ],
                  ),
                ),
                SizedBox(
                  width: getProportionateScreenWidth(190),
                  child: ElevatedButton(
                    key: const Key("cart_checkout_button"),
                    child: const Text(
                      'Check Out',
                      style: TextStyle(fontSize: 20),
                    ),
                    onPressed: () {
                      Navigator.push(
...
