...
            }),
      ),
    );

    return Column(children: [
      GestureDetector(
          key: const Key('order_history_item'),
          onTap: () {},
          child: Container(
              constraints: const BoxConstraints(
                maxWidth: 600,
              ),
              margin: EdgeInsets.all(2.0),
...
