...
            }
            return null;
          }),
    );

    final submitButton = ElevatedButton(
      key: const Key("submit_response_button"),
      style: ElevatedButton.styleFrom(
          onPrimary: Colors.black,
          primary: Colors.black,
          minimumSize: const Size(200, 60),
          shape: const RoundedRectangleBorder(
            borderRadius: BorderRadius.all(Radius.circular(2)),
...
