...
          return null;
        },
      ),
    );

    final submitQuestionButton = ElevatedButton(
        key: const Key("submit_question_button"),
        style: ElevatedButton.styleFrom(
            onPrimary: Colors.black,
            primary: Colors.black,
            minimumSize: const Size(200, 60),
            shape: const RoundedRectangleBorder(
              borderRadius: BorderRadius.all(Radius.circular(2)),
...
